[package]
name = "request_smuggler"
version = "0.1.0-alpha.2"
authors = ["Alexander Mironov <sh1yo@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Sh1Yo/request_smuggler"
repository = "https://github.com/Sh1Yo/request_smuggler"
description = "Http request smuggling vulnerability scanner"
categories = ["command-line-utilities"]
keywords = ["security", "web", "scanner"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.7"
regex = "1.3.7"
clap = "2.33.1"
url = "2.1.1"
flate2 = "1.0"
env_logger = "0.7.1"
colored = "2"
